welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:29: error: ';' expected but '(' found.
setPos(x+1,y-1)
      ^